--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <artifactId>sitemeshpageparser</artifactId>
   <groupId>com.paulhammant.sitemeshpageparser</groupId>
-  <version>2.5a11</version>
+  <version>2.5a12-SNAPSHOT</version>
 
   <name>sitemeshpageparser</name>
   <inceptionYear>2001</inceptionYear>
